# databricks-sdk-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  Makefile  README.md  VCPKG_SUBMISSION.md  vcpkg.json  vcpkg.json.in
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  format-check.yml  release.yml
cmake/: databricks_sdk-config.cmake.in
dev-docs/: README.md  VCPKG_SUBMISSION.md
examples/: CMakeLists.txt  compute_example.cpp  jobs_example.cpp  secrets_example.cpp  simple_query.cpp  unity_catalog_example.cpp
examples/async/: async_operations.cpp  pool_async_combined.cpp
examples/basic/: jobs_example.cpp  modular_config_example.cpp  secure_query.cpp  simple_query.cpp
examples/common/: config_helper.h
examples/pooling/: benchmark.cpp  transparent_pooling.cpp
include/databricks/: client.h  config.h  connection_pool.h  jobs.h  version.h  version.h.in
include/databricks/compute/: compute.h  compute_types.h
include/databricks/core/: client.h  config.h
include/databricks/internal/: secure_string.h
include/databricks/jobs/: jobs.h  jobs_types.h
include/databricks/secrets/: secrets.h  secrets_types.h
include/databricks/unity_catalog/: unity_catalog.h  unity_catalog_types.h
packaging/: README.md
packaging/vcpkg-port/: portfile.cmake  usage  vcpkg.json
scripts/: check_odbc_setup.sh  update_version.sh
src/: client.cpp  config.cpp  connection_pool.cpp  jobs.cpp
src/compute/: compute.cpp  compute_types.cpp
src/core/: client.cpp  config.cpp
src/internal/: http_client.cpp  http_client.h  http_client_interface.h  logger.cpp  logger.h  pool_manager.cpp  pool_manager.h
src/jobs/: jobs.cpp
src/secrets/: secrets.cpp
src/unity_catalog/: unity_catalog.cpp  unity_catalog_types.cpp
tests/: CMakeLists.txt  README.md
tests/helpers/: test_utils.h
tests/mocks/: mock_http_client.h  mock_odbc.h
tests/unit/: test_client.cpp  test_config.cpp  test_connection_pool.cpp  test_jobs.cpp  test_sql_injection.cpp
tests/unit/compute/: test_compute.cpp
tests/unit/core/: security_test.cpp  test_client.cpp  test_config.cpp  test_connection_pool.cpp  test_error_handling.cpp  test_sql_injection.cpp
tests/unit/jobs/: test_jobs.cpp
tests/unit/secrets/: test_secrets.cpp
tests/unit/unity_catalog/: test_unity_catalog_errors.cpp
vcpkg-port-template/: README.md
